tests/fixtures/positive/database/DaoNotInterface.kt
package test

annotation class Dao

@Dao
abstract class UserDao {
    abstract fun loadUsers(): List<String>
}
