tests/fixtures/negative/database/DaoNotInterface.kt
package test

annotation class Dao

@Dao
interface UserDao {
    fun loadUsers(): List<String>
}
